--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://chaitanya211204.github.io/Portfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
@@ -32,6 +33,5 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  },
-  "homepage": "https://chaitanya211204.github.io/Portfolio"
+  }
 }
