--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://chaitanya211204.github.io/Portfolio",
+  "homepage": "https://chaitanya211204.github.io/Portfolio/",
   "type": "module",
   "scripts": {
     "dev": "vite",
